@@ -109,7 +109,8 @@ mi_cmd_file_list_exec_source_files (char *command, char **argv, int argc)
     ui_out_end (uiout, ui_out_type_tuple);
   }
 
-  map_partial_symbol_filenames (print_partial_file_name, NULL);
+  map_partial_symbol_filenames (print_partial_file_name, NULL,
+				1 /*need_fullname*/);
 
   ui_out_end (uiout, ui_out_type_list);
 }
