@@ -33,7 +33,8 @@ extern struct bcache *psymbol_bcache_get_bcache (struct psymbol_bcache *);
 void expand_partial_symbol_names (int (*fun) (const char *, void *),
 				  void *data);
 
-void map_partial_symbol_filenames (symbol_filename_ftype *fun, void *data);
+void map_partial_symbol_filenames (symbol_filename_ftype *fun, void *data,
+				   int need_fullname);
 
 extern const struct quick_symbol_functions psym_functions;
 
